--- a/bacit-dotnet.MVC/Views/Home/Index.cshtml
+++ b/bacit-dotnet.MVC/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
 }
 
 @model bacit_dotnet.MVC.Models.RazorViewModel
-<h2>Et av de store spørsmålene vi må klare å svare på er, 
-    hvor lang tid tar det å gå til ørsta rådhus?  </h2>
+
+<h2> Nordic Door hjemmeside </h2>
 @{
-    
+
     <h1>@Model.Content</h1>
+
 }
 
-<a asp-controller="Suggestions" asp-action="Index">Link til registreringsskjema</a>
+<a asp-controller="Suggestions" asp-action="Index">Link til oppretting av forslag</a>
