--- a/bacit-dotnet.MVC/Views/Suggestions/Index.cshtml
+++ b/bacit-dotnet.MVC/Views/Suggestions/Index.cshtml
@@ -21,7 +21,55 @@
             <input type="datetime" name="TimeStamp" />
         </li>
         <li>
+            <label for="Plan">Plan</label>
+            <input type="text" name="Plan" />
+        </li>
+        <li>
+            <label for="Do">Do</label>
+            <input type="text" name="Do" />
+        </li>
+        <li>
+            <label for="Study">Study</label>
+            <input type="text" name="Study" />
+        </li>
+        <li>
+            <label for="Act">Act</label>
+            <input type="text" name="Act" />
+        </li>
+        <li>
+            <label for="Status">Status</label>
+            <input type="text" name="Status" />
+        </li>
+        <li>
+            <label for="Responsible">Responsible</label>
+            <input type="text" name="Responsible" />
+        </li>
+        <li>
+            <label for="Dept">Dept</label>
+            <input type="text" name="Dept" />
+        </li>
+        <li>
+            <label for="CaseNum">CaseNum</label>
+            <input type="text" name="CaseNum" />
+        </li>
+        <li>
+            <label for="PicBefore">PicBefore</label>
+            <input type="longblob" name="PicBefore" />
+        </li>
+        <li>
+            <label for="PicAfter">PicAfter</label>
+            <input type="longblob" name="PicAfter" />
+        </li>
+        <li>
+            <label for="Timeframe">Timeframe</label>
+            <input type="text" name="Timeframe" />
+        </li>
+        <li>
+            <label for="Deadline">Deadline</label>
+            <input type="datetime" name="Deadline" />
+        </li>
+        <li>
             <input type="submit" value="Lagre" />
         </li>
     </ul>
-</form> 
+</form>
