--- a/bacit-dotnet.MVC/Views/Home/Users.cshtml
+++ b/bacit-dotnet.MVC/Views/Home/Users.cshtml
@@ -3,7 +3,7 @@
     @foreach (var user in Model.Users)
     {
         <li>
-            Navn: @user.Name , epost: @user.Email
+            Navn: @user.Name , Team: @user.Team
         </li>
     }
 </ul>
