--- a/bacit-dotnet.MVC/Views/Users/Index.cshtml
+++ b/bacit-dotnet.MVC/Views/Users/Index.cshtml
@@ -1,31 +1,23 @@
-﻿<form  asp-action="save" asp-controller="users" method="post">
+﻿<form asp-action="save" asp-controller="users" method="post">
     <ul>
         <li>
-            <label for="Title">Navn</label>
+            <label for="Name">Navn</label>
             <input type="text" name="Name" />
         </li>
         <li>
-            <label for="Name">Passord</label>
-            <input type="password" name="Password" />
+            <label for="Password">Passord</label>
+            <input type="text" name="Password" />
         </li>
         <li>
-            <label for="Team">Email</label>
-            <input type="email" name="Email" />
-        </li>
-        <li>
-            <label for="Description">Beskrivelse</label>
-            <input type="text" name="EmployeeNumber" />
-        </li>
-        <li>
-            <label for="TimeStamp">Tidspunkt</label>
+            <label for="Team">Team</label>
             <input type="text" name="Team" />
         </li>
         <li>
-            <label for="TimeStamp">Role</label>
-            <input type="Text" name="Role" />
+            <label for="EmpNr">Beskrivelse</label>
+            <input type="text" name="EmpNr" />
         </li>
         <li>
             <input type="submit" value="Lagre" />
         </li>
     </ul>
-</form> 
+</form>
