--- a/bacit-dotnet.MVC/Views/Suggestions/Save.cshtml
+++ b/bacit-dotnet.MVC/Views/Suggestions/Save.cshtml
@@ -1,6 +1,6 @@
 @model bacit_dotnet.MVC.Models.Suggestions.SuggestionViewModel;
 <h1>
-    Heiii O.O
+    aauuugh O.O
     <br>
     Navn @Model.Name
     Tittel @Model.Title
